--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,33 @@ body {
     background: rgb(58, 58, 58);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul {
-    list-style: none;
-}
-
-header {
-    background-color: black;
-
-    background-repeat: no-repeat;
-    position: relative;
 }
 
 /* Class */
 
+/*Todo: image for banner*/
+.banner {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: black;
+    text-align: center;
+    height: 200px;
+    margin: auto;
+    text-align: center;
+}
+
+.developer-box {
+    text-align: center;
+    height: 200px;
+}
+
+.developer-holder {
+    margin: 10px 20px;
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+}
+
+/* TODO: delete features*/
 .features {
     background: white;
     color: black;
@@ -30,15 +40,65 @@ header {
     background-size: 600px;
 }
 
+.media-holder {
+    background-color: gray;
+    color: black;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100px;
+}
+
+.pages-buttons {
+    width: 100%;
+    height: auto;
+}
+
+.pages-holder {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 100px 1fr 1fr;
+    height: 100px;
+}
+
+.pages-text {
+    position: relative;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.pages-buttons:hover {
+    color: black;
+    background-color: antiquewhite;
+    text-decoration: underline;
+    background-color: antiquewhite;
+}
+
 .logo a {
     background-color: red;
-    background-image: url("/images/PPSICON.png");
+    background-image: url("/images/PPSLogo.png");
     background-size: 100px;
     background-repeat: no-repeat;
+    border-radius: 50%;
     display: inline-block;
+    object-position: 100% 100%;
     text-indent: -999999px;
     height: 100px;
     width: 100px;
+}
+
+.section-1 {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.section-2 {
+    background-color: rgb(50, 50, 230);
+    margin: 10px 50px;
+    height: 600px;
 }
 
 /* ID */
@@ -54,9 +114,10 @@ a {
 }
 
 /* Pseudo Classes */
-a:hover {
-    text-decoration: underline;
-    background-color: gray;
+
+
+.white-box:first-child {
+    margin-left: 50px;
 }
 
 li:first-child {
